[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Projectiles/Characters/projprog3.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_6.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_8.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_10.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_12.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Projectiles/Progfer/attp03/sprite395_14.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_4.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_5.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_6.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_7.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Particules/Transformation/sprite394_8.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Other/shadow_0.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "send",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 9.57244

[sub_resource type="CircleShape2D" id=3]
radius = 10.3627

[node name="projprog3" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.307751, -13.9377 )
frames = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.178614, 11.5505 )
scale = Vector2( 1.17862, 0.851154 )
texture = ExtResource( 19 )

[node name="veg" type="CollisionShape2D" parent="."]
position = Vector2( 0.0267747, 0.056822 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="retourne" type="Timer" parent="."]

[node name="boulpos" type="Position2D" parent="."]
position = Vector2( 0.0417964, 0.0117511 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 524290

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="retourne" to="." method="_on_retourne_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
